--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" 
+  {
+  background-color:yellow;
+  }>
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
@@ -65,7 +68,7 @@
   <script id="templates/home.html" type="text/ng-template">
     <ion-view view-title="Home">
       <ion-content class="padding">
-        <div class="row">
+        <div class="row">`
           <label class="p1">MPG:</label> 
           <input type="text" name="mpg" placeholder="Input Your MPG" />
         </div>
@@ -86,6 +89,10 @@
           <div class="row">CO2 Emitted: {{carbon}} lbs.</div>
           <div class="row">Equivilent to the carbon dioxide sequestered by blank trees per year</div>
           <button class="button button-block button-positive">Stop</button>
+
+        <center>
+                <iframe width="654" height="380" src="https://www.youtube.com/embed/HJwt9nwCElA" frameborder="0" allowfullscreen></iframe>
+        </center>
 
       </ion-content>
     </ion-view>
