making stop button work

--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter" 
-  {
-  background-color:yellow;
-  }>
+  <body ng-app="starter" {="" background-color:yellow;="" }="">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
@@ -88,10 +85,6 @@
           <div class="row">CO2 Emitted: {{carbon}} lbs.</div>
           <div class="row">Equivilent to the carbon dioxide sequestered by blank trees per year</div>
           <button class="button button-block button-positive">Stop</button>
-
-        <center>
-                <iframe width="654" height="380" src="https://www.youtube.com/embed/HJwt9nwCElA" frameborder="0" allowfullscreen></iframe>
-        </center>
 
       </ion-content>
     </ion-view>
