--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
           <div class="row">This Trip: {{totalMiles}} miles</div>
           <div class="row">CO2 Emitted: {{carbon}} lbs.</div>
           <div class="row">Equivilent to the carbon dioxide sequestered by blank trees per year</div>
-          <button class="button button-block button-positive">Stop</button>
+          <button class="button button-block button-positive" ng-click="stopClick()">Stop</button>
 
       </ion-content>
     </ion-view>
