--- a/www/index.html
+++ b/www/index.html
@@ -51,11 +51,11 @@
         <ion-nav-view name="home-tab"></ion-nav-view>
       </ion-tab>
 
-      <ion-tab title="Active" icon="ion-ios-football" href="#/tab/active">
+      <ion-tab title="Active" icon="ion-model-s" href="#/tab/active">
         <ion-nav-view name="active-tab"></ion-nav-view>
       </ion-tab>
 
-      <ion-tab title="stats" icon="ion-stats" href="#/tab/stats">
+      <ion-tab title="stats" icon="ion-stats-bars" href="#/tab/stats">
         <ion-nav-view name="stats-tab"></ion-navs-view>
       </ion-tab>
 
