--- a/www/index.html
+++ b/www/index.html
@@ -75,13 +75,13 @@
   <script id="templates/active.html" type="text/ng-template">
     <ion-view view-title="Collecting data">
       <ion-content class="padding">
-        <div ng-if="totalMiles">
+        <div ng-if="init">
           <div class="row">This Trip: {{totalMiles | number: 3}} miles</div>
           <div class="row">CO2 Emitted: {{carbon | number: 3}} lbs.</div>
           <div class="row">Equivilent to the carbon dioxide sequestered by {{tree | number: 3}} trees per year</div>
           <button class="button button-block button-positive" ng-click="stopClick()">Stop</button>
         </div>
-        <div ng-if="!totalMiles">
+        <div ng-if="!init">
           Hold on, we're just starting to collect data.
         </div>
       </ion-content>
@@ -91,7 +91,7 @@
   <script id="templates/stats.html" type="text/ng-template">
     <ion-view view-title="Your trips">
       <ion-content class="padding stats">
-       
+       {{device}}
         <div class="stats-bar">
           Total Miles: {{totalMiles | number: 3}} miles<br>
           Total Emissions: {{totalEmissions | number: 3}} lbs. of CO<sub>2</sub>
