--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -91,7 +92,6 @@
   <script id="templates/stats.html" type="text/ng-template">
     <ion-view view-title="Your trips">
       <ion-content class="padding stats">
-       {{device}}
         <div class="stats-bar">
           Total Miles: {{totalMiles | number: 3}} miles<br>
           Total Emissions: {{totalEmissions | number: 3}} lbs. of CO<sub>2</sub>
@@ -103,6 +103,7 @@
           Emissions: {{trip.emissions | number: 3}} lbs. CO<sub>2</sub>
         </div>
 
+        <p>Your device id: {{device}}</p>
       </ion-content>
     </ion-view>
   </script>
