--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
     <ion-view view-title="Welcome to Carbonation">
       <ion-content class="padding">
         <p><b><u>Directions:</u></b></p>
-        <p>1. Please enter the MPG of your car in the indicated field.</p>
+        <p>1. Please make sure the location service of your phone is on, then enter the MPG of your car in the indicated field.</p>
         <p>2. Press the 'start' button before beginning your drive.</p>
         <p>3. Do not leave the app while driving - your phone will automatically remain on during the drive.</p>
         <p>4. Press the stop button when finished driving. Thank you!</p>
