--- a/www/index.html
+++ b/www/index.html
@@ -88,9 +88,9 @@
           <p>Make sure to press the stop button when you are finished with your trip.</p>
           <button class="button button-block button-positive" ng-click="stopClick()">Stop</button>
         </div>
-        <div ng-if="!init">
+        <!-- <div ng-if="!init">
           Hold on, we're just starting to collect data.
-        </div>
+        </div> -->
       </ion-content>
     </ion-view>
   </script>
