--- a/www/index.html
+++ b/www/index.html
@@ -98,10 +98,10 @@
   <script id="templates/stats.html" type="text/ng-template">
     <ion-view view-title="Your trips">
       <ion-content class="padding stats">
-       <div class="stats-bar">
+       <!-- <div class="stats-bar">
           Total Miles: {{totalMiles | number: 3}} miles<br>
           Total Emissions: {{totalEmissions | number: 3}} lbs. of CO<sub>2</sub>
-        </div>
+        </div> -->
 
      <!--   <div ng-repeat="trip in trips | orderBy:'-createdAt'" class="trip-teaser">
           Date: {{trip.createdAt | date:"MM/dd/yyyy 'at' h:mma"}}<br>
